# wordle-connections-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
app/: config.py
app/engines/: connections_engine.py  models.py  wordle_engine.py
app/output/: discord_webhook.py
app/players/: backend.py  llm_player.py
app/players/prompts/: connections.txt  wordle.txt
app/puzzles/: connections_source.py  dates.py  wordle_source.py
app/runner/: app.py  game_runner.py  scheduler.py
app/storage/: db.py  stats.py
docs/superpowers/plans/: 2026-06-17-wordle-connections-discord-bot.md
docs/superpowers/specs/: 2026-06-17-wordle-connections-discord-bot-design.md
tests/: test_app.py  test_config.py  test_connections_engine.py  test_connections_source.py  test_discord_webhook.py  test_game_runner.py  test_llm_player.py  test_models.py  test_storage.py  test_wordle_engine.py  test_wordle_source.py
tests/fixtures/: connections_2026-06-17.json  wordle_2026-06-17.json  wordle_launch.json
