[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wordle-connections-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "ollama>=0.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "apscheduler>=3.10",
  "httpx>=0.27",
  "tenacity>=8.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.wordlists" = ["*.txt"]
"app.players.prompts" = ["*.txt"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
